--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	
 	<meta charset="utf-8">
-	<title>White | responsive bootstrap3 html5 one page template</title>
+	<title>Daniel Khoury</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -92,24 +92,23 @@
 						<a href="index.html" ><span class="b1">w</span><span class="b2">h</span><span class="b3">i</span><span class="b4">t</span><span class="b5">e</span></a>
 					</div><!-- //LOGO -->
 					
-					<!-- SEARCH FORM -->
+					<!-- SEARCH FORM 
 					<div id="search-form" class="pull-right">
 						<form method="get" action="#">
 							<input type="text" name="Search" value="Search" onFocus="if (this.value == 'Search') this.value = '';" onBlur="if (this.value == '') this.value = 'Search';" />
 						</form>
-					</div><!-- SEARCH FORM -->
+					</div> -->
 					
 					<!-- MENU -->
 					<div class="pull-right">
 						<nav class="navmenu center">
 							<ul>
 								<li class="first active scroll_btn"><a href="#home" >Home</a></li>
-								<li class="scroll_btn"><a href="#about" >About Us</a></li>
+								<li class="scroll_btn"><a href="#about" >About Me</a></li>
 								<li class="scroll_btn"><a href="#projects" >Projects</a></li>
-								<li class="scroll_btn"><a href="#team" >Team</a></li>
-								<li class="scroll_btn"><a href="#news" >News</a></li>
-								<li class="scroll_btn last"><a href="#contacts" >Contacts</a></li>
-								<li class="sub-menu">
+								<li class="scroll_btn"><a href="#team" >Reviews</a></li>
+								<li class="scroll_btn last"><a href="#contacts" >Contact</a></li>
+						<!-- 		<li class="sub-menu">
 									<a href="javascript:void(0);" >Pages</a>
 									<ul>
 										<li><a href="blog.html" >Blog</a></li>
@@ -117,7 +116,7 @@
 										<li><a href="portfolio-post.html" >Portfolio Single Work</a></li>
 									</ul>
 								</li>
-							</ul>
+							</ul>  -->
 						</nav>
 					</div><!-- //MENU -->
 				</div><!-- //MENU BLOCK -->
